--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,8 @@
-<div>
-    <a class="internal-link" href="{{ site.baseurl }}/"><b>{{ site.title }}</b></a>
+<div style="display: flex;">
+  <a class="internal-link" href="{{ site.baseurl }}/" style=color:black;'><b>{{ site.title }}</b></a></span>
+  <a href="https://linkedin.com/in/brozena/" title='linkedin' style='margin-left: auto;'><i class='fa-brands fa-linkedin'></i></a>
+  <a href="https://scholar.google.com/citations?user=EC9BDRAAAAAJ" title='google scholar'><i class='fa-brands fa-google-scholar'></i></a>
+  <a href="https://orcid.org/0000-0001-7621-1566" title='orcid'><i class='fa-brands fa-orcid'></i></a>
+  <a href="https://github.com/brozena/" title='github'><i class='fa-brands fa-github'></i></a>
+  <a href="mailto:jeff@brozena.net" title='email'><i class='fa-solid fa-envelope'></i></a>
 </div>
