--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,13 @@
   {% include head.html %}
   <body>
     <nav>{% include nav.html %}</nav>
-    <div class="wrapper">
-      <main>{{ content }}</main>
+    <div>
+      <main>
+        {{ content }}
+      </main>
+      {% include post_pagination.html %}
       <footer>{% include footer.html %}</footer>
     </div>
-
     {% include link-previews.html wrapperQuerySelector="content" %}
   </body>
 </html>
