--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,10 +1,13 @@
-$color-primary: hsl(0, 0%, 10%);
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@400;700;800&display=swap');
+
+
+$color-primary: #52adc8;
 $color-text: hsl(0, 0%, 20%);
 $color-subtext: hsl(0, 0%, 30%);
 $color-border: hsl(0, 0%, 85%);
 $color-box-background: mix($color-primary, white, 4%);
 $border-radius: 4px;
-$font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+$font-family: Bitter, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
   sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 
 body {
@@ -16,7 +19,7 @@ body {
   overflow-x: hidden;
   color: $color-text;
   font-size: 1rem;
-  max-width: 63em;
+  max-width: 45em;
 
   @media (min-width: 820px) {
     font-size: 1.2rem;
@@ -79,18 +82,10 @@ a {
   transition: background 300ms;
   padding: 0 0.1em;
   text-decoration: none;
-  border-bottom: 1px solid $color-border;
+  //border-bottom: 1px solid $color-border;
   color: $color-primary;
   &:hover {
     color: black !important;
-    background: #fffaf1;
-  }
-  &:after {
-    position: relative;
-    top: -0.5em;
-    font-size: 0.7em;
-    content: "↗";
-    color: #aaaaaa;
   }
   &.internal-link:after,
   &.footnote:after,
@@ -100,7 +95,6 @@ a {
 }
 
 *:focus {
-  background: #ffe8bc !important;
   color: black !important;
 }
 
@@ -117,11 +111,7 @@ nav {
 
   @media (min-width: 700px) {
     grid-template-columns: 3fr 1fr;
-    grid-template-areas: "content side";
-  }
-}
-
-.backlink-box {
+    grid-template-areas: "content side"; } } .backlink-box {
   background: $color-box-background;
   padding: 1em;
   border-radius: $border-radius;
@@ -143,4 +133,104 @@ code {
 .invalid-link-brackets {
   color: #ccc;
   cursor: help;
+}
+
+.pagination {
+  display: flex;
+  margin-top: 0.5em;
+  padding-top: 0.5em;
+
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    font-family: $font-family;
+  }
+
+  li {
+    display: block;
+    float: left;
+    margin-left: -1px;
+
+    a {
+      margin-bottom: 0.25em;
+      padding: 0.5em 1em;
+      font-family: $font-family;
+      font-size: 11px;
+      font-weight: bold;
+      line-height: 1.5;
+      text-align: center;
+      text-decoration: none;
+      color: black;
+      border: 1px solid black;
+      border-radius: 0;
+
+      &:hover {
+        color: var(color-subtext);
+      }
+
+      &.current {
+        color: #fff;
+        background: black;
+      }
+
+      &.disabled {
+        pointer-events: none;
+        cursor: not-allowed;
+      }
+    }
+
+    &:first-child {
+      margin-left: 0;
+
+      a {
+        border-top-left-radius: $border-radius;
+        border-bottom-left-radius: $border-radius;
+      }
+    }
+
+    &:last-child {
+      a {
+        border-top-right-radius: $border-radius;
+        border-bottom-right-radius: $border-radius;
+      }
+    }
+  }
+
+  /* next/previous buttons */
+  &--pager {
+    display: block;
+    padding: 1em 2em;
+    float: left;
+    width: 50%;
+    font-family: $font-family;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    border: 1px solid var(color-border);
+    border-radius: $border-radius;
+
+    &:hover {
+      color: var(color-text);
+    }
+
+    &:first-child {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+
+    &:last-child {
+      margin-left: -1px;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+
+    &.disabled {
+      visibility: hidden;
+      pointer-events: none;
+      cursor: not-allowed;
+    }
+  }
 }
