--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,10 +38,10 @@
   {% endif %}
 
   <title>
-    {% if page.id == "home" %}
-      {{ site.title }}
+    {% if page.id == "About" %}
+      {{ page.title }}
     {% else %}
-      {{ page.title }} &mdash; {{ site.title }}
+      {{ site.title }}
     {% endif %}
   </title>
 </head>
