--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -18,7 +18,7 @@ body {
   padding: 4vh 6vw;
   overflow-x: hidden;
   color: $color-text;
-  font-size: 1rem;
+  font-size: 11pt;
   max-width: 45em;
 
   @media (min-width: 820px) {
@@ -34,7 +34,7 @@ time {
 
 footer {
   margin: 2em 0;
-  font-size: 0.8em;
+  font-size: 0.8rem;
   color: mix($color-text, white, 80%);
   padding-top: 1em;
 }
@@ -48,7 +48,7 @@ img {
 }
 
 blockquote {
-  padding: 1.5em;
+  padding: 1.5rem;
   margin: 0;
   font-size: 0.88em;
   background: $color-box-background;
@@ -156,7 +156,7 @@ code {
       margin-bottom: 0.25em;
       padding: 0.5em 1em;
       font-family: $font-family;
-      font-size: 11px;
+      font-size: 1rem;
       font-weight: bold;
       line-height: 1.5;
       text-align: center;
@@ -204,7 +204,7 @@ code {
     float: left;
     width: 50%;
     font-family: $font-family;
-    font-size: 1rem;
+    font-size: 0.7em;
     font-weight: bold;
     text-align: center;
     text-decoration: none;
