--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -14,7 +14,6 @@ layout: default
   <div id="notes-entry-container">
     <content>
       {{ content }}
-      <p>This line appears after every note.</p>
     </content>
 
     <side style="font-size: 0.9em">
@@ -23,8 +22,11 @@ layout: default
       <div style="display: grid; grid-gap: 1em; grid-template-columns: repeat(1fr);">
       {% for backlink in page.backlinks %}
         <div class="backlink-box">
-        <a class="internal-link" href="{{ site.baseurl }}{{ backlink.url }}{%- if site.use_html_extension -%}.html{%- endif -%}">{{ backlink.title }}</a><br>
-        <div style="font-size: 0.9em">{{ backlink.excerpt | strip_html | truncatewords: 20 }}</div>
+          {% for backlink in page.backlinks %}
+            {% assign linked_doc = site.documents | where: "url", backlink.url | first %}
+            {{ backlink.type }}<a class="wiki-link" href="{{ linked_doc.url }}">{{ linked_doc.title }}</a><br>
+            <!-- <div style="font-size: 0.9em">{{ linked_doc.excerpt | strip_html | truncatewords: 10 }}</div> -->
+          {% endfor %}
         </div>
       {% endfor %}
       </div>
@@ -41,7 +43,5 @@ layout: default
 </article>
 
 <hr>
-
-<p>Here are all the notes in this garden, along with their links, visualized as a graph.</p>
 
 {% include notes_graph.html %}
